# PyQt-builder

./: .gitignore  .hgignore  MANIFEST.in  NEWS  README  README.md  pyproject.toml  rb-product  setup.cfg  setup.py
PyQt5_builder/: __init__.py  bindings.py  buildable.py  builder.py  installable.py  project.py  qmake_builder.py
PyQt5_builder/bundle/: main.py
doc/: command_line_tools.rst  conf.py  example.rst  index.rst  introduction.rst  pyproject_toml.rst  pyqtbuild_api.rst  pyqtbundle.rst
docs/: command_line_tools.rst  conf.py  example.rst  index.rst  introduction.rst  pyproject.toml  pyproject_toml.rst  pyqtbundle.rst  releases.md
pyqtbuild/: __init__.py  bindings.py  build_system_extension.py  builder.py  installable.py  project.py  version.py
pyqtbuild/bundle/: __init__.py  abstract_package.py  bundle.py  bundle_main.py  main.py  qt_metadata.py  qt_wheel.py  qt_wheel_main.py  verbose.py  wheel.py
pyqtbuild/bundle/qt_wheel_distinfo/: METADATA  WHEEL
