# Specify the build system for the project.
[build-system]
requires = ["sip >=6.8, <7", "PyQt-builder >=1.10, <2"]
build-backend = "sipbuild.api"

[project]
name = "PyQt6-Charts"
version = "6.7.0"
description = "Python bindings for the Qt Charts library"
readme = "README.md"
urls.homepage = "https://www.riverbankcomputing.com/software/pyqtchart/"
dependencies = ["PyQt6 (>=6.2.0)"]
license = {text = "GPL v3"}

[[project.authors]]
name = "Riverbank Computing Limited"
email = "info@riverbankcomputing.com"


# Specify a PyQt-based project.
[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

# Configure the project.
[tool.sip.project]
tag-prefix = "QtCharts"

# Define and configure each set of bindings.
[tool.sip.bindings.QtCharts]
qmake-QT = ["charts"]
